--- a/_posts/2017-09-05-Melaka.markdown
+++ b/_posts/2017-09-05-Melaka.markdown
@@ -39,7 +39,7 @@ Throughout the day, we also noticed how popular I was with my blonde hair. Peopl
 
 ![popular andreas](https://lh3.googleusercontent.com/5wn06Rkl1du1LRScQCVz5zJI0Vy5_-KWoTy-O5oTTiGJ4YDkcjB0Egz0lJ6ZRt3kZrcIiryOG_-n9Cm-ruYyetfy4GCRRKL71inUypPddWM8cG8jw4eN3KBYComVyRKOo4l51pVPLQ)
 
-Moving on, we went back to the hostel, where we rested for a couple of hours, and where I tried to get rid of the headache I had gotten through not drinking enough water. Next, we went to the streetfood market again, where I had dumplings and the most delicious french fries I have ever had in my life. Having gotten the french fries, I also took a selfie with the workers upon their request. The life of a superstar feels great!
+Moving on, we went back to the hostel, where we rested for a couple of hours, and where I tried to get rid of the headache I had gotten through not drinking enough water. It was nice to skip the hot climate for a couple of hours. Anyways, next thing on our schedule was going to the streetfood market again, where I had dumplings and the most delicious french fries I have ever had in my life. Having gotten the french fries, I also took a selfie with the workers upon their request. The life of a superstar feels great!
 
 ![french fries](https://lh3.googleusercontent.com/IqE_-pY0zkIrCdNsTO2hnanSCdLf8CpFYq_PB1l_QcMQ4OROar_dBIR2gxbPsZB577ocdplxamom_tYeqFdZBXJfxRHUoXu8ERebdFVqMgSM0Kpt3PudZHDvMab21stUYjunmMKKfQ)
 
@@ -53,4 +53,4 @@ This pricing held true throughout the entire trip, where I struggled to get rid 
 
 ![priest stare. I stare](https://lh3.googleusercontent.com/5Meu2zsH1oVbt4cdU6E8vIbnIaK8lS1FN-MhPZbHHWQyM7USOBYEMnoZv1KemZzWjnOfVf4qT_qWothEa2wS7qifxtO2ILXZgpD-uWqKdIuGnTGREce40qjUbqYgZIMTe_3uN-dMGA)
 
-Summing up this trip, it was very price-worthy, and it was nice to party in the city at night. However, I am very glad we only stayed for 2 days, as there was not much to do. Also, it is very dirty here, and it feels alot more unsafe than Singapore. We saw this first hand immediately before we took off back home with our bus, when a girl came crying and said that a motorbike gang had snatched her backpack; sending her for quite a rough fall to the ground. An incident we had read about a few hours earlier in our NTU exchange travelling group. Therefore, I recommend you always stick together and do go alone in night when you are intoxicated without telling your friends where you are or responding to messages two hours after your splitting up with them (I am looking at you, Liam the Irish).
+Summing up this trip, it was very price-worthy, and it was nice to party in the city at night. However, I am very glad we only stayed for 2 days, as there was not much to do. Also, it is very dirty here, and it feels alot more unsafe than Singapore. We saw this first hand immediately before we took off back home with our bus, when a girl came crying and said that a motorbike gang had snatched her backpack; sending her for quite a rough fall to the ground. A kind of incident we had just read about a few hours earlier in our NTU exchange travelling group (from someone else who had faced the exact same crime). Therefore, I recommend you always stick together and do go alone in night when you are intoxicated without telling your friends where you are or responding to messages two hours after your splitting up with them (I am looking at you, Liam the Irish).
