--- a/_posts/2017-09-05-Melaka.markdown
+++ b/_posts/2017-09-05-Melaka.markdown
@@ -58,6 +58,6 @@ This pricing held true throughout the entire trip, where I struggled to get rid 
 
 ![priest stare. I stare](https://lh3.googleusercontent.com/5Meu2zsH1oVbt4cdU6E8vIbnIaK8lS1FN-MhPZbHHWQyM7USOBYEMnoZv1KemZzWjnOfVf4qT_qWothEa2wS7qifxtO2ILXZgpD-uWqKdIuGnTGREce40qjUbqYgZIMTe_3uN-dMGA)
 
-Summing up this trip, it was very price-worthy, and it was nice to party in the city at night. However, I am very glad we only stayed for 2 days, as there was not much to do. Also, it is very dirty here, and it feels alot more unsafe than Singapore. We saw this first hand immediately before we took off back home with our bus, when a girl came crying and said that a motorbike gang had snatched her backpack; sending her for quite a rough fall to the ground. A kind of incident we had just read about a few hours earlier in our NTU exchange travelling group (from someone else who had faced the exact same crime). Therefore, I recommend you always stick together and do go alone in night when you are intoxicated without telling your friends where you are or responding to messages two hours after your splitting up with them (I am looking at you, Liam the Irish).
+Summing up this trip, it was very price-worthy, and it was nice to party in the city at night. However, I am very glad we only stayed for 2 days, as there was not much to do. Also, it is very dirty here, and it feels alot more unsafe than Singapore. We saw this first hand immediately before we took off back home with our bus, when a girl came crying and said that a motorbike gang had snatched her backpack; sending her for quite a rough fall to the ground. A kind of incident we had just read about a few hours earlier in our NTU exchange travelling group (from someone else who had faced the exact same crime). Therefore, I recommend you always stick together and do not go alone in night when you are intoxicated without telling your friends where you are or responding to messages two hours after your splitting up with them (I am looking at you, Liam the Irish).
 
 Oh, and if you want to look at more photos from the trip, simply go to our shared [Melaka album](https://goo.gl/photos/hA18fegDwVvJYcGn6)!
