--- a/_posts/2017-09-27-Hong-Kong.markdown
+++ b/_posts/2017-09-27-Hong-Kong.markdown
@@ -214,3 +214,7 @@ Sitting on the flight back, people seemed to have managed to pick the right slee
 ![sleeping people](https://lh3.googleusercontent.com/VjJ0bshoECyYWT-ckEbZsplzlMsoUN1iiy4G0LRZ2keZusHR9Ub10WgHu-32Fgjad0Ff24CUZNgS9cWIB4X_TnlTvIEWRDZOydZd4pc4DVFFoP4eNbCUEim0mklJjiWdqliwKgVQTA)
 
 Anyways, this is it about my trip to Hong Kong. You definitely have to go here someday in your life, as it is an amazing city with a blend of UK and Asia. I did not think I would grow to like the city so much after having only been here for a few days, but I definitely do. The difference from Singapore is also huge, as this city seems to have a lot more soul and personality to it. One can really sense that people do what they want, and that culture decides people's behaviour, not law. Buildings here and there are worn down, and one can find dirt on the streets here, but the city is very safe to be in. A great advantage about being a swede in Hong Kong is that their currency is almost equal to SEK, so it is easy to keep track of your expenses.
+
+Lastly, I want to give Nils Hjelm a huge thanks for recommending Hong Kong. It was definitely a great travel advice!
+
+Next up is Bali, Gilli Islands and Lombok... Looking forward to showing you that chapter, which begins on Thursday!
