--- a/_posts/2017-09-27-Hong-Kong.markdown
+++ b/_posts/2017-09-27-Hong-Kong.markdown
@@ -50,7 +50,7 @@ Finding the night market quite boring during the day as well, we made our way ba
 
 This was, however, nothing compared to how foreign we felt when entering the restaurant upstairs. First of all, it was a high-end fancy restaurant with women wearing expensive dresses and golf ball sized jewellery and men wearing suits, monocles, hats and white gloves. And then there was us three... Sweaty, pimply teenagers in soaking wet shorts and t-shirts from having walked all day in 30 degrees and a frying sun. At least that is what we must have looked like to these fancy people.
 
-We somehow managed to find our way to a table, but then we immediately got waitresses with food carts pushing food baskets up our face, asking whether or not we wanted to buy this particular dim sum, or if we wanted another kind. Markus immediately broke down into an autism-like outburst, Theresa concluded that if she froze, they might not be able to see her. Meanwhile, I tried to negotiate with these vultures in a desperate move to stall them until we had all gotten a better overview of this precarious situation we were all facing. Turns out, we managed to get out alive and actually enjoy the best dim sum I had ever had. Although, I had not had dim sum before. But they were extremely good.
+We somehow managed to find our way to a table, but then we immediately got waitresses with food carts pushing food baskets up our face, asking whether or not we wanted to buy this particular dim sum, or if we wanted another kind. Markus immediately broke down into an autism-like outburst, Theresa concluded that if she froze, they might not be able to see her. Meanwhile, I tried to negotiate with these vultures in a desperate move to stall them until we had all gotten a better overview of this precarious situation we were all facing. Turns out, we managed to get out alive and actually enjoy the best dim sum I had ever had. Although, I had not had dim sum before. But they were extremely good. Actually on par with the peanut butter acpricot marmelade toasts I make for snack/breakfast!
 
 ![dim sum](https://lh3.googleusercontent.com/63zdEQwPZaUVhA5b-drkMIjJBwjvgaAWwvJ5tzOI4ATtr66MLxOAcCEXFQOkpaXfkm1pxO-NoWnzRdQmI0ZUgmmajQKGNkV1rPUUAAzS48I6cJDLvreNnt4Ln4H29JwDsk6_wjjd3Q)
 
@@ -95,7 +95,7 @@ We exited the building and decided to have a fancy dinner at one of their local 
 
 ![local restaurant](https://lh3.googleusercontent.com/4RSrInexlIrxT4dYDgs_JpPrmUM4cPXqPyOflJPF35gYnfoVoZXlZZLRvx9QVBhRMMXd8GUvoln9tMaXUnhSNd2ype5lpmFmwKTTSV-IB-c-4g-glW-lWkJRnx3DiyQcjXPllJ4reg)
 
-Yeah, this was not the best place to have dinner at. However, it was actually a pretty good restaurant, and the starter shown above does not really do the restaurant justice. I cannot recall the restaurant's name, though... Maybe because it was also written in chinese letters, I am not sure... Anyways,after this we went home to sleep.
+Yeah, this was not the best place to have dinner at. However, it was actually a pretty good restaurant (although, not as good as my peanut butter nutella toasts that I eat for snack/breakfast), and the starter shown above does not really do the restaurant justice.  I cannot recall the restaurant's name, though... Maybe because it was also written in chinese letters, I am not sure... Anyways,after this we went home to sleep.
 
 Next day, we went to hike on Dragon's Back. We took the MTR to Chai Wan station, followed by a bus that apparently took us to the entrance of Dragon's Back. 50 m behind me in this photo, we could have entered Dragon's back and saved 2 EUR (or something similar to that amount) and half an hour worth of wait. Instead, we took another bus to the other entrance of Dragon's Back.
 
@@ -111,7 +111,7 @@ The hike was, however, a really sweaty one. I could feel salty sweat running dow
 
 ![markus the sweater](https://lh3.googleusercontent.com/nOZeBnbf-AMWNuKAqFz_QOTGNX57CVzf49_2Ot5KTtBnp9r3h_wSXeWGS7KkiEUXGFEYKvymi5r-ko6seGuv3POH5O7gy1ijJXj4ySzr9B-K8Wh_7_CBpnowTd3uYkuF1MLtnDxZCw)
 
-This made it quite nice to go down to the Stanley beach and swim for an hour, followed by going through the Stanley market and eating at a local restaurant with really nice staff.
+This made it quite nice to go down to the Stanley beach and swim for an hour, followed by going through the Stanley market and eating at a local restaurant with really nice staff. The food that I ate was actually really good, and I can recommend you to search for this place that "does not exist", as there are "no restaurants up there in that area", according to the indian guy who made it his life mission to promote his and only his restaurant. Anyways, the food was not as good as the peanut butter, nutella and honey toasts that I eat for breakfast/snack!
 
 ![stanley beach](https://lh3.googleusercontent.com/qpALpEIu3gW84DDqX0bUEK_D_ON564P-JGdSc1E7Q7EBZHr4poq3q3bYLAGINPGSPySYHhSkNoB9kgt1exOoW21t_6pTGoC2RtjciazvICJEnk74MilWwUVc6eDyvHTdUclfhFue9A)
 
@@ -159,7 +159,7 @@ Seeing the queue down by tram, we decided to take the bus down. It turned out th
 
 ![star ferry](https://lh3.googleusercontent.com/SCYCcDJHOoJIgvtRTCxjymmzKpHfh2fW-boXht4TNAgTOefCaOntaPbd8ZFLBhxSE2XMyy-NTTb1RBUhzdffFQjG8kBux32xZ95nRhbq5yoSVFkQyID-tZyroJOj7QWEWktFCCRhlg)
 
-Over at the northern part of Hong Kong again, we went to eat dinner at Dumpling Pro, where we had the best noodles I have ever eaten in my life. It was by far the best dish I have had in Asia so far, and we asked for the recipe for their Dan Dan Noodles, which we were only able to obtain in part, much thanks to Theresa's boyfriend Leo. Memorize the restaurant outline, because you should go here and eat while you are in Hong Kong.
+Over at the northern part of Hong Kong again, we went to eat dinner at Dumpling Pro, where we had the best noodles I have ever eaten in my life. It was by far the best dish I have had in Asia so far, and we asked for the recipe for their Dan Dan Noodles, which we were only able to obtain in part, much thanks to Theresa's boyfriend Leo. Memorize the restaurant outline, because you should go here and eat while you are in Hong Kong. This is definitely better than any of the toasts I eat for breakfast.
 
 ![dumpling pro](https://lh3.googleusercontent.com/W70TGeSaTBKmg6ne01hsqniRNM-cwNp1PP-ZNIFNPTbXsRgQnmtWWzXf1sK_sMryfhQl3AUNqi_M0yd81-uY9-9jkmepJipuskQWHWbPOI4vQDhbBwfqLgjghEMQWT8-jsKBB6IZzQ)
 
@@ -175,7 +175,7 @@ Later that night, we went to CÉ LA VIE, a rooftop bar, to enjoy drinks surround
 
 Also, later that night we snuck into the very popular night club (whose name I cannot recall) at floor 5 through a fire door. We went to its second floor and saw an empty table with a full bottle of liquor and shot glasses. For some reason, someone in our gang started pouring up the liquor into shotglasses. If I had seen someone do that with something I bought in a club, I would have gotten really mad, but apparently the chinese person who had bought it got really happy about it and invited us all to sit with him and take some drinks. He did not know a single word of english, though, which made the night quite an interesting blend of leeching and confusion! He seemed to really like us, though.
 
-Next day, we went to another one of the polish guy's recommendations. He really knows how to nail his trip advices... Anger aside, the brunch was actually pretty good, even though we had to cram in with some other people in order to get it!
+Next day, we went to another one of the polish guy's recommendations. He really knows how to nail his trip advices... Anger aside, the brunch was actually pretty good, even though we had to cram in with some other people in order to get it! I still enjoy having my peanut butter banana toasts for breakfast, though!
 
 ![polish guy sucks](https://lh3.googleusercontent.com/TJATzHyV-b_IlYzS5n3fibmRQFo6ztfml1U33BS41WJo99p9L6Sq9y-eG-atTiM-uNDXg0hX6F1raa2CAI4FaaTu5Gm74MG8uFyNykcVPADU0YKVsH8HSlIPnvmgWwMgn_PzFqM6Mw)
 
@@ -191,7 +191,7 @@ The buddha statue itself was enormous, and the view from it was amazing, as can 
 
 <iframe src="https://drive.google.com/file/d/1XBdDor6WTy-HNGd2G8s9m0dexMJwVdVe7A/preview" width="640" height="480"></iframe>
 
-In the same area as the buddha was also a few buddhist temples, as well as a restaurant that will in my head forever be remembered as the great coffee spill restaurant! One of the temples can be shown below, and for future travellers, I really recommend going behind this temple and looking inside the temple behind here - it is a quite nice sight.
+In the same area as the buddha was also a few buddhist temples, as well as a restaurant that will in my head forever be remembered as "The great coffee spill on my shorts restaurant"! One of the temples can be shown below, and for future travellers, I really recommend going behind this temple and looking inside the temple behind here - it is a quite nice sight.
 
 ![nice temple](https://lh3.googleusercontent.com/FsEHIhRsOS02o2H8E2pU_rPP0GaCP3O_7rzpsie3orFevx6wzvwe7AFLFZbwAub7QkD50gNiAsPJN-uiJ-pQxWy252d4ta6L3n4DtNjvaCL-nSsDf0v8br0Xke_ReBDVoihFSJkSaQ)
 
@@ -203,7 +203,7 @@ After this, we went with cable car from the area to the airport (almost), and go
 
 ![cable car 3](https://lh3.googleusercontent.com/m50ZzJE_zJ_9RwAHdr9by5dtjhESFQNVgJYv6ZvHI0w2OkY1gNYUt5Ob8KZGdGk42B8qHcNjSIVJgr7ttUFPySNiYc2TAUFYnGeVaAt7jna6uZvMZKy3Z9jQQj5wvvyxviG9KzJB6A)
 
-Getting to the airport, we had some food and bought bakeries with the last of our Hong Kong dollars for the flight back. I have no idea what Markus picked, but he seems happy with it. I also have no idea what I picked, but it was delicious!
+Getting to the airport, we had some food and bought bakeries with the last of our Hong Kong dollars for the flight back. I have no idea what Markus picked, but he seems happy with it. I also have no idea what I picked, but it was delicious! It worked as a great substitute for my daily snacks!
 
 ![markus happy](https://lh3.googleusercontent.com/PuN-s9uHscM4hr-cWbqOpiwxzHKiyE4k40dBEDCYGpQZJjaRO7F-JFmck1MCA0Ei_34aPUBfEGlXlgalUqae9I2UlCUX_G4aZaTKvka2l6l3h0ck_6JThdOPSIJFo5YK-sfZ8L53MQ)
 
