--- a/_posts/2017-10-11-Bali.markdown
+++ b/_posts/2017-10-11-Bali.markdown
@@ -22,7 +22,7 @@ Tips for the trip:
 
 First day of recess week. We took a mid-day flight from Singapore to Bali and met Clàudia the Catalonian girl who lives a floor under me and was also going to Bali with some other girls (including Sara Kristiansson who also went with me to Cambodia). On the flight, we also met a german NTU girl whose firends had apparently cancelled the trip because of the anticipated volcano eruption on Bali. Personally, I was a little bit excited about the eruption, as I had never seen such a thing. Also, it did not make much sense to worry about it, since the volcano was so far away - even at Padang Bai, where we stayed at. This is one of the closer harbours to the volcano.
 
-![bali map](https://goo.gl/images/QQMVSz)
+![bali map](https://i1.wp.com/www.bali-travel.de/images/Bali_Map.gif)
 
 Anyways, we got off from the flight and I tried to withdraw money, as the deal me and Markus had made was for him to pay hotels and flight tickets with card, and I would pay with cash - then we could take care of dividing the costs when we got back. Turns out, however, that the ATMs over there only limit small withdrawals, and each withdrawal is quite expensive as well - as can be seen from the tips section above. On Claudia's recommendation, we decided to fix a taxi driver which could take us to an ATM elsewhere and Padang Bai for 250,000 Rupiah. We managed to bargain our way down from 600,000 Rupiah (ca 40 EUR) for this one hour trip to 250,000 Rupiah (ca 16 EUR). They really want to trick westerners over here with their, locally speaking, extreme prices. Watch out for this!
 
