--- a/_posts/2017-10-11-Bali.markdown
+++ b/_posts/2017-10-11-Bali.markdown
@@ -20,7 +20,7 @@ Tips for the trip:
 * Look at the grab app for the transition price to get to where you wanna go. The taxi drivers will try to chart you up to an extreme amount of what it is actually worth - above 200%.
 * Always be careful when withdrawing money from ATMs here, as they make it possible for you to take the money without grabbing your ATM card. You do not want to lose your card in this region - especially if you are travelling alone.
 
-First day of recess week. We took a mid-day flight from Singapore to Bali and met Clàudia the Catalonian girl who lives a floor under me and was also going to Bali with some other girls (including Sara Kristiansson who also went with me to Cambodia). On the flight, we also met a german NTU girl whose firends had apparently cancelled the trip because of the anticipated volcano eruption on Bali. Personally, I was a little bit excited about the eruption, as I had never seen such a thing. Also, it did not make much sense to worry about it, since the volcano was so far away - even at Padang Bai, where we stayed at. This is one of the closer harbours to the volcano.
+First day of recess week. We took a mid-day flight from Singapore to Bali and met Clàudia the Catalonian girl who lives a floor under me and was also going to Bali with some other girls (including Sara Kristiansson who also went with me to Cambodia). On the flight, we also met a german NTU girl whose firends had apparently cancelled the trip because of the anticipated volcano eruption of Mt. Agung on Bali. Personally, I was a little bit excited about the eruption, as I had never seen such a thing. Also, it did not make much sense to worry about it, since the volcano was so far away - even at Padang Bai, where we stayed at. This is one of the closer harbours to the volcano.
 
 ![bali map](https://i1.wp.com/www.bali-travel.de/images/Bali_Map.gif)
 
