--- a/_posts/2017-10-11-Bali.markdown
+++ b/_posts/2017-10-11-Bali.markdown
@@ -53,11 +53,11 @@ Sadly though, it is very dirty in these areas, and there was trash everywhere on
 ![trash everywhere](https://lh3.googleusercontent.com/Ond1XTluXdykFD4zt_UatWZZIr4PRkcGkep6ztp6FcnWhYBLesKALFVtcvfN4gnTWJ37LkKQ2uO0cN8z_vPifanQ0kyAsanOfuvUXSuRtUBfeF3_CBUxe75zCeWOxAgr1dUX_dDDDg)
 
 
-Moving on, we quickly turned to scooter back, checked out and got on to the ferry, Eka Jaya, that took us to Gilli Air. Oh, and before I forget it, we had a volcano refugee camp across from our hotel. They had to flee from the surrounding area of the volcano.
+Moving on, we quickly turned our scooter back, checked out and got on the ferry, Eka Jaya, that took us to Gilli Air. Oh, and before I forget it, we had a volcano refugee camp across our hotel. They had to flee from the surrounding area of the volcano.
 
 ![volcano refugees](https://lh3.googleusercontent.com/-quT2ATHfbiUUsZ60gdTZNadSnMm554AMGvKneHdw-Cojc051t-N4TxyxE-gMGf1uAsucU3AcLKtZ3Qj0Wrs7EPWcZQRoJ-wbyQbcGcuwdpTDnfnQg2fUsALiDG0hVAhJdP4-fh33Q)
 
-It took a little bit more than an hour to get to the Gilli islands, from what I can recall, but time passed by, as we both had beer in our hands, and a great leandscape to look at.
+It took a little bit more than an hour to get to the Gilli islands, from what I can recall, but time quickly passed by, as we both had beer in our hands, and a great landscape to look at.
 
 ![beer at eka jaya](https://lh3.googleusercontent.com/dy_j3otNXg2wEt32J_xRKIlGgYteVUZzUKlJ-_Z4hViNUi6DLya2F9-74iNt0iBj905rn6MarblFsOJDhN4aWX5AOsuCR5nDBVeDsDvTXBhEUyyZKfDcjXQjvkHFEdKLJ9WU49RFIg)
 
@@ -68,5 +68,7 @@ Also, we started talking to a norwegian guy who was going to Gilli Meno with his
 Getting to the Gilli islands, we were definitely impressed by how much the islands looked like paradise islands.
 
 ![paradise sea](https://lh3.googleusercontent.com/Hbowap65bfrf0sl_CXTI7kFImcFm67V0VtCj34d-dEZgEwDFB3KD6RL7CiHBSRFeFEbDekhN9lLtT-_6gSjcHTraJUrrUO9CbjG6xLCkRhuQ05SoUhoyi9kV8FaSTp6QiUCiFWH8Yw)
+
+![gilli meno](https://lh3.googleusercontent.com/mdFBAh4gucWNtyThw78mIpXaUtSszk0VfP_DYXr9PZpKvBy2i-aqqzL-CUYfoLzeLmXcOGmiaK5FeLoxhWlz3UNqnfRIKjp8FxSi_gP375ngo6RRmJm2QTDPzoPo-CLE1O1FlavXnw)
 
 Soon, we landed on Gilli Air, where we got a horse ride to our Hostel. More on that tomorrow!
