--- a/_posts/2017-10-12-Gilli-Air.markdown
+++ b/_posts/2017-10-12-Gilli-Air.markdown
@@ -5,7 +5,7 @@ date:   2017-10-12 23:00:00 +0200
 categories: jekyll update
 ---
 
-Starting where we left off, we took a horse and carriage back to the hostel, Old Villages, for 100,000 Rupiah (ca 6 eur). It was indeed an old village, if you consider its design with houses with straw roofs. It had fresh rooms with air conditioning, along with nice breakfast and very nice personnel, as we would later find out. The bedrooms were big, with a balcony providing a nice place to view the surrounding nature, as well as eating food in the mornings. The toilet was in a room detached from the bedroom, and we had to walk to the side of the house in order to access it. It was not the most fresh bathroom I've been in, but aside from the cockroach I had to kill in it, it worked!
+Starting where we left off, we took a horse and carriage back to the hostel, Old Villages, for 100,000 Rupiah (ca 6 eur). It was indeed an old village, if you consider its design with houses with straw roofs. It had fresh rooms with air conditioning, along with nice breakfast and very nice personnel, as we would later find out. The bedrooms were big, with a balcony providing a nice place to view the surrounding nature, as well as eating food in the mornings. The toilet was in a room detached from the bedroom, and we had to walk to the side of the house in order to access it. It was not the most fresh bathroom I have been in, but aside from the cockroach I had to kill in it, it worked!
 
 ![horse and carriage](https://lh3.googleusercontent.com/QCN1FCDIMx9W3jP_i26_ommrUdt1WdLZN081HEyzLonPtrg6oreHmRsuff91MlmNy3HCgEmtIKe_x4MJ2rjvfN9q3zWc4t_tpY6Gl_O4C2W3Dkl_VWI9tcBMIoPX2bABLnNffgJ1fw)
 
