--- a/_posts/2017-10-12-Gilli-Air.markdown
+++ b/_posts/2017-10-12-Gilli-Air.markdown
@@ -65,7 +65,7 @@ Anyways, the schedule was constructed as following: we first stopped by two diff
 
 ![local restaurant](https://lh3.googleusercontent.com/2Rqhxk8d7C5LvH-NfOhNu3SZTRjgSmZeAsoCnK90E1YyfGdMRs2qD289bAazjCnMEoEIGjn08TjWMI5K65EYL2LJUI78yMkBXf8Uqbg_AOPgJc586WhyN7V88sjHoz3sNgLQf0I3nA)
 
-After the lunch, we made one more stop for snorkelling outside Gilli Air, where I managed to touch a turtle. Then we got back to land and a Norwegian guy, Sondre, from the company joined us for a swim on the southern beach.
+After the lunch, we made one more stop for snorkelling outside Gilli Air, where I managed to touch a turtle. Then we got back to land and a Norwegian guy, Sondre, from the group we met, joined us for a swim on the southern beach.
 
 Moving forward, we made our way back to the hostel and bought some rice wine for 70,000 Rupiah (ca 4 EUR) from a shady guy, along with a peeled and sweetened pineapple from an old lady. I was very much skeptic of the rice wine, but Markus really wanted it, so we bought it. We waited for 10 minutes for the shady guy to go and get it from a friend, and when he got back, we could see some light brown liquid in a 1,5 liter used water bottle. I was even more convinced not to drink much of it, as I had heard about people getting methanol poisoning from home brewed alcohol in this region before. The shady guy was quite happy with us having bought it, though. In fact, he was so happy, he tried to sell us weed one minute later.
 
