--- a/_posts/2017-10-12-Gilli-Air.markdown
+++ b/_posts/2017-10-12-Gilli-Air.markdown
@@ -81,7 +81,7 @@ I even think god had a presence.
 
 ![god's hand](https://lh3.googleusercontent.com/2JEdmLM8nHky6vLOLqLHko6jWwJjjEN0Gz2hJFubFIkmLW0Y7w4WiRhxJJ2T5hiF1IWBBsoP3pnPtxMrxd9zBEgSzySOBXEV7SjxelyN7RZKEMGXfBUXmdNbhBulo2tlPGaGGbg5pg)
 
-Yeah, we had sensed it a little bit up to this point. These islands were honeymoon islands. And here me and Markus were doing our recess week casually, watching sunsets, sharing food, doing snorkelling trips, paying for each other's expenses, finishing each other's sentences, worrying about the kids back at home. Wrapping it up, I guess these islands can be recommended for future honeymoons - they even have lots of spas! One of the spas I thought looked really cool was called Slow Spa in the middle of the island.
+Yeah, we had sensed it a little bit up to this point. These islands were honeymoon islands. And here me and Markus were casually doing our recess week; watching sunsets, sharing food, doing snorkelling trips, paying for each other's expenses, finishing each other's sentences, worrying about the kids back at home. Wrapping it up, I guess these islands can be recommended for future honeymoons - they even have lots of spas! One of the spas I thought looked really cool was called Slow Spa in the middle of the island.
 
 ![spa](https://lh3.googleusercontent.com/aqcWlD3N6bm3NcHjkcsRnOWY8MLFpJZlkSukJWYqrh5eGLT5Do9LNERITqdUjsMtFzEqwjZ4agLu6BsSnHrYSdxWtV8iBqGtw_Y1qA1N4-TzydTgM7XLKzCG26q17W78QqJIS1PBqg)
 
